# greco

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  THREAT_MODEL.md
.github/workflows/: ci.yml
docs/architecture/: critical-analysis.md  design.md  recalibration.md
docs/operations/: implementation-plan.md  local-model-lab.md  phase3-movable-suite-plan.md  risks.md  roadmap.md  secret-handling.md  ws2-baseline.md
docs/research/: 2605-30621-implications.md  current-source-review.md
examples/skills/fail/: manifest.json  run.sh
examples/skills/pass/: manifest.json  run.sh
fixtures/eval-suite/: README.md
fixtures/eval-suite/t1-conventions/: MOVABILITY.md  criterion.sh  task.json
fixtures/eval-suite/t1-conventions/workspace/: CONVENTIONS.md  Cargo.toml
fixtures/eval-suite/t2-read-economy/: MOVABILITY.md  criterion.sh  task.json
fixtures/eval-suite/t2-read-economy/workspace/: INDEX.md
fixtures/eval-suite/t3-edit-discipline/: MOVABILITY.md  criterion.sh  task.json
fixtures/eval-suite/t3-edit-discipline/workspace/: Cargo.toml
fixtures/eval-suite/t4-staging/: MOVABILITY.md  criterion.sh  task.json
fixtures/eval-suite/t4-staging/workspace/: README.md  bootstrap.sh
fixtures/eval-suite/t5-recovery/: MOVABILITY.md  criterion.sh  task.json
fixtures/eval-suite/t5-recovery/workspace/: Cargo.toml  (+1 more)
src/: agent.rs  audit.rs  catalog.rs  cli.rs  config.rs  eval.rs  loop_control.rs  main.rs  modification.rs  proposal.rs  tools.rs  trajectory.rs  tui.rs  validation.rs
src/loop_control/: mod.rs  tests.rs
src/provider/: mod.rs  openai.rs
(+11 files in other folders)
