[package]
name = "greco-cli"
version = "0.6.0-alpha.1"
edition = "2024"
rust-version = "1.90"
license = "MIT"
repository = "https://github.com/Arakiss/greco"
description = "A Rust coding-agent harness that observes its own use and improves itself within operator-defined budgets and an evaluation suite."

[[bin]]
name = "greco"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
